# hetero-zip

./: CHANGELOG.md  LICENSE  README.md  hetero-zip.cabal
.github/workflows/: haskell-ci.yml
src/Data/Traversable/: HeteroZip.hs
