cabal-version:      3.0
name:               hetero-zip
version:            0.1.0.0
synopsis:           Zip lists with Traversables

description:
    A `Traversable`'s elements can be visited one at a time, and updated
    in-place. That means we can visit them at the same time as we walk along a
    list, and use the values in the list to update the values in the
    `Traversable`. This library does just that.

license:            BSD-3-Clause
license-file:       LICENSE
author:             Phil Hazelden
maintainer:         philip.hazelden@gmail.com

copyright:          Phil Hazelden, 2024
category:           Data
build-type:         Simple

extra-doc-files:    README.md, CHANGELOG.md

common warnings
    ghc-options: -Wall -Wcompat

library
    import:           warnings
    default-language: Haskell2010
    exposed-modules:  Data.Traversable.HeteroZip
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   src
    build-depends:    base ^>=4.16.4.0,
                      infinite-list

test-suite hetero-zip-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs

    build-depends:
        base ^>=4.16.4.0,
        hetero-zip
